trying to fix contact us and color for dark mode

--- a/client/src/components/Contact/contact.scss
+++ b/client/src/components/Contact/contact.scss
@@ -237,6 +237,7 @@
         margin-top: 150px;
         font-family: 'Shree Devanagari 714';
         text-align: center;
+        color: white;
 
         .close {
           border: none;
